--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -95,3 +95,18 @@
   </script>
 </body>
 </html>
+
+
+2. [Valid Anagram](https://www.udemy.com/course/js-algorithms-and-data-structures-masterclass/learn/quiz/4410604#overview)<details><summary>Code</summary>
+  ```javascript
+  function validAnagram(str1, str2) {
+  if (str1.length !== str2.length) {
+  return false
+  } else {
+  let sorted1 = str1.split("").sort().join("");
+  let sorted2 = str2.split("").sort().join("");
+  return (sorted1 !== sorted2 ? false : true);
+  }
+  }
+  ```
+  </details>
